--- a/eWalle/Base.lproj/Main.storyboard
+++ b/eWalle/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="d8x-qb-8Is">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kgo-D7-l2u">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -305,15 +305,15 @@
                                 <color key="backgroundColor" red="0.13054850700000001" green="0.13624098900000001" blue="0.1843203306" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KUa-og-ef8">
-                                <rect key="frame" x="0.0" y="211" width="240" height="265"/>
+                                <rect key="frame" x="0.0" y="211" width="187" height="265"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MenuCell" id="KXf-q4-kod" customClass="MenuCell" customModule="eWalle" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="240" height="44"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="187" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KXf-q4-kod" id="WhK-a2-EN7">
-                                            <rect key="frame" x="0.0" y="0.0" width="240" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="187" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QUY-VF-ZkV">
@@ -365,6 +365,10 @@
                                 <color key="textColor" red="0.4823529412" green="0.49803921569999998" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="em8-LZ-KzE">
+                                <rect key="frame" x="187" y="136" width="188" height="376"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OeU-Kv-x4e"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -379,12 +383,13 @@
                         <outlet property="menuTableView" destination="KUa-og-ef8" id="0Du-Pk-vAq"/>
                         <outlet property="nameLabel" destination="aEB-Ej-zrn" id="O1i-mT-yBf"/>
                         <outlet property="nameLocationStackView" destination="NbD-NL-2Xu" id="QIZ-jj-aNa"/>
+                        <outlet property="selectedVCImageView" destination="em8-LZ-KzE" id="49G-Hp-xLg"/>
                         <outlet property="versionLabel" destination="N6S-QQ-6i4" id="iKk-iU-gyp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g9s-lt-jAV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1532" y="23"/>
+            <point key="canvasLocation" x="1532" y="22.938530734632685"/>
         </scene>
     </scenes>
     <color key="tintColor" red="1" green="0.67450980390000004" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
