--- a/eWalle/Base.lproj/Main.storyboard
+++ b/eWalle/Base.lproj/Main.storyboard
@@ -277,13 +277,13 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="D9q-Dc-iYc">
-                                        <rect key="frame" x="35" y="14" width="141.5" height="44"/>
+                                        <rect key="frame" x="35" y="14" width="153.5" height="56.5"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="96H-Nn-vJn">
-                                                <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar1" translatesAutoresizingMaskIntoConstraints="NO" id="96H-Nn-vJn">
+                                                <rect key="frame" x="0.0" y="0.0" width="56" height="56.5"/>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="NbD-NL-2Xu">
-                                                <rect key="frame" x="54" y="3.5" width="87.5" height="37"/>
+                                                <rect key="frame" x="66" y="9.5" width="87.5" height="37"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Carol Black" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aEB-Ej-zrn">
                                                         <rect key="frame" x="0.0" y="0.0" width="83" height="22"/>
@@ -358,17 +358,17 @@
                                     <action selector="menuCloseButtonAction:" destination="d8x-qb-8Is" eventType="touchUpInside" id="fej-OU-Lcs"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="em8-LZ-KzE">
+                                <rect key="frame" x="267" y="155" width="188" height="376"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Version 1.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6S-QQ-6i4">
-                                <rect key="frame" x="28" y="633" width="51" height="14"/>
+                                <rect key="frame" x="28" y="596" width="51" height="14"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
                                 <color key="textColor" red="0.4823529412" green="0.49803921569999998" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="em8-LZ-KzE">
-                                <rect key="frame" x="267" y="155" width="188" height="376"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="OeU-Kv-x4e"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -396,7 +396,6 @@
     <resources>
         <image name="add" width="48" height="48"/>
         <image name="appLogo" width="81" height="53.333332061767578"/>
-        <image name="avatar" width="44" height="44"/>
         <image name="avatar1" width="56" height="56.333332061767578"/>
         <image name="close" width="15" height="15"/>
         <image name="loginPageLeftBar" width="200.33332824707031" height="812"/>
